# voice-agent

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/api/: mod.rs
src/api/handlers/: mod.rs
src/api/models/: mod.rs
src/audio/: converter.rs  mod.rs  processor.rs
src/config/: mod.rs
src/error/: mod.rs
src/metrics/: mod.rs
static/: app.js  index.html  styles.css
