[package]
name = "audio_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# Audio handling
cpal = "0.15"
ringbuf = "0.3"
ffmpeg-next = { version = "7.1", features = ["codec", "format", "software-resampling"] }
ffmpeg-sys-next = "7.1"
hound = "3.5"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenv = "0.15"

# Multipart form handling
bytes = "1.4"

# Metrics
metrics = "0.21"
metrics-util = "0.15"
metrics-exporter-prometheus = { version = "0.12", features = ["http-listener"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Base64 handling
base64 = "0.21"

# Temporary file handling
tempfile = "3.10.1"

# UUID generation
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4" 