[package]
name = "audio_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.6", features = ["full"] }
ffmpeg-next = { version = "7.1", features = ["codec", "format", "software-resampling"] }
hound = "3.5"
# Async runtime
tokio = { version = "1.43", features = ["full"] }
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Environment variables
dotenv = "0.15"
# Multipart form handling
bytes = "1.4"

# Metrics
metrics = "0.24"
metrics-util = "0.19"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

# UUID generation
uuid = { version = "1.15", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4" 